chore: Improved consistency, local data path configurability, API versioning, public function extraction, integration testing, inter-service authentication
